<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="270dp"
    android:layout_height="480dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="5dp"
        app:srcCompat="@drawable/ic_launcher"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/developer" />


    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_aboutInfo" />
</LinearLayout>