<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_item_background"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp"
    android:paddingVertical="5dp">


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/global_card_corner"
        android:id="@+id/app_item_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="5dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/icon"
                app:srcCompat="@drawable/ic_home_24dp" />

            <com.v2dawn.noactivegui.ui.support.CornerLabelView
                style="@style/CornerLabelView.Default"
                android:id="@+id/sys_app"
                app:clvFillColor="@color/tr_red"
                app:clvText1="SYS"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/app_icon"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    android:id="@+id/app_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/app_label" />

                <TextView
                    android:id="@+id/package_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/package_name" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>